@@ -4,6 +4,10 @@ CHANGE LOG
 
 2012-04-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
+	* Adding checks for Quadro cards to enable cylinder shader workaround.
+	
+2012-04-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
 	* Improved PyMOL Plugin System; Thomas Holder's PyMOL OSFP project
 	
 2012-04-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>
